# Hello_FastAPI

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: async_example.py  auth.py  items.py  users.py
app/archive/: _users.py  auth.py  items.py
app/crud/: posts.py  users.py
app/db/: database.py  posts.py
app/db/alembic/: env.py
app/db/alembic/versions/: 84183f169497_initial_schema.py  9b202c68bf20_add_intpk_and_cascade_delete_posts_to_.py  a710da1514cd_.py
app/db/models/: __init__.py  annotations.py  base.py  post.py  user.py
app/routers/: app.py  posts.py  users.py
app/schemas/: database.py  models.py  schemas.py  users.py
tests/: conftest  test_example.py
