[project]
name = "hello-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "PaulNero",email = "58290662+PaulNero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standart] (>=0.37.0,<0.38.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
