[project]
name = "hello-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "PaulNero",email = "58290662+PaulNero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standart] (>=0.37.0,<0.38.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg[async,binary] (>=3.2.12,<4.0.0)",
    "greenlet (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
